<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/img_t1"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_templeinfo1"
                android:text="@string/temp_info1"
                android:textColor="#000"
                android:layout_marginTop="30sp"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_templeinfo2"
                android:text="@string/temp_info2"
                android:textColor="#000"
                android:layout_marginTop="20sp"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_templeinfo3"
                android:text="@string/temp_info3"
                android:textColor="#000"
                android:layout_marginTop="20sp"
                android:textSize="15dp"/>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>