<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/ic_newbg"
    tools:context=".HomeActivity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="70dp"
                    android:orientation="vertical">


                        <ImageView
                            android:layout_width="170dp"
                            android:layout_height="130dp"
                            android:scaleType="fitXY"
                            android:id="@+id/img_temple"
                            android:src="@drawable/ic_god"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:id="@+id/txt_name"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:textSize="25sp"
                            android:text="@string/title"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/txt_name1"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:textSize="25sp"
                            android:text="@string/title1"/>


                        <Button
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="50dp"
                            android:layout_gravity="center"
                            android:id="@+id/btn_signin"
                            android:alpha="2"
                            android:text="@string/signin"
                            android:background="@drawable/btnbg"
                            android:textStyle="normal"
                            android:textSize="20sp"
                            android:textColor="#000"
                            android:textAllCaps="false"/>
                        <Button
                            android:layout_width="250dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:id="@+id/btn_signup"
                            android:alpha="7"
                            android:text="@string/signup"
                            android:background="@drawable/btnbg"
                            android:textColor="#000"
                            android:textStyle="normal"
                            android:textSize="20sp"
                            android:textAllCaps="false"/>
                </LinearLayout>
        </ScrollView>
</RelativeLayout>







