<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_archana"
                android:text="Archana"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/txt_arinfo"
                android:text="@string/event_archana"
                android:textStyle="normal"
                android:textSize="15dp"
                android:textColor="#000"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_abhishekam"
                android:layout_marginTop="12dp"
                android:text="Abhishekam"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:id="@+id/txt_abinfo"
                android:text="@string/event_abhishekam"
                android:textStyle="normal"
                android:textSize="15dp"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_vaikuntaekadashisevalu"
                android:text="Vaikunta Ekadashi Sevalu"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:id="@+id/txt_veinfo"
                android:text="@string/event_vaikuntaekadashisevalu"
                android:textStyle="normal"
                android:textSize="15dp"
                android:textColor="#000"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>